[package]
name = "ping-pong"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
lto = "thin"
codegen-units = 1

[profile.release]
opt-level = 2
strip = false
lto = "thin"
codegen-units = 1

[dependencies]
coffee = { version = "0.4", features = ["opengl"] }
rand = "0.8"


